crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_type_params_using.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_well_formed_analysis
warning: unused function type parameter
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_using.move:6:16
  │
6 │ public fun foo<T>() {
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused function type parameter
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_using.move:11:21
   │
11 │ public fun foo_spec<T>() {
   │                     ^ Unused type parameter 'T'.
   │
   = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Underlying func not accepting type param from spec
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_using.move:11:1
   │  
11 │ ╭ public fun foo_spec<T>() {
12 │ │   foo<u8>();
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
