crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_warn_order.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 126
expression: output
---
Verification successful
warning: Consider moving pre-condition before function call
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_warn_order.move:13:5
   │
13 │     asserts(true);
   │     ^^^^^^^^^^^^^
